@@ -111,7 +111,7 @@ Returns value from set.
          From Class::Utils::set_params():
                  Unknown parameter '%s'.
 
-=head1 EXAMPLE
+=head1 EXAMPLE1
 
 =for comment filename=random_fifty_fifty.pl
 
@@ -136,6 +136,32 @@ Returns value from set.
 
  # Output like:
  # foo|bar
+
+=head1 EXAMPLE2
+
+=for comment filename=random_ten_ninty.pl
+
+ use strict;
+ use warnings;
+
+ use Random::Set;
+
+ # Object.
+ my $obj = Random::Set->new(
+         'set' => [
+                 [0.1, 'foo'],
+                 [0.9, 'bar'],
+         ],
+ );
+
+ # Get random data.
+ my $random = $obj->get;
+
+ # Print out.
+ print $random."\n";
+
+ # Output like:
+ # foo (10%)|bar (90%)
 
 =head1 DEPENDENCIES
 
