@@ -1,4 +1,5 @@
 0.08
+ - Add another example to doc.
  - Rename example to better file name.
  - Update Module::Install to 1.21 version.
  - Update copyright years.
